# shogitest

./: .gitignore  Cargo.toml  Makefile  test.pgn
src/: cli.rs  engine.rs  main.rs  pgn.rs  runner.rs  shogi.rs  tc.rs
src/tournament/: mod.rs  pgn_out_wrapper.rs  reporter_wrapper.rs  round_robin.rs
