[package]
name = "shogitest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossbeam-channel = "0.5.15"
flexi_logger = "0.31.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.177"
log = "0.4.28"
memchr = "2.7.6"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.2"
wait-timeout = "0.2.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
]
